--- a/app/src/main/res/layout/activity_social_platform.xml
+++ b/app/src/main/res/layout/activity_social_platform.xml
@@ -17,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@android:color/background_light"
-        android:text="whatsapp"
+        android:text="@string/tv_whatsapp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:background="@android:color/background_light"
-        android:text="facebook"
+        android:text="@string/tv_facebook"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="165dp"
         android:layout_height="42dp"
         android:background="@android:color/background_light"
-        android:text="instagram"
+        android:text="@string/tv_insta"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
