Button fixed according to the instructions

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -189,15 +189,17 @@
         android:id="@+id/emergency"
         android:layout_width="190dp"
         android:layout_height="57dp"
-        android:background="@android:color/background_light"
+
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_emergency"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:background="@drawable/rounded_button"
         app:layout_constraintBottom_toTopOf="@+id/guideline68"
         app:layout_constraintEnd_toStartOf="@+id/guideline72"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.905" />
+        app:layout_constraintVertical_bias="0.905"
+                        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
