--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,6 +19,10 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDBhx2BuAuuzrFDTfUU8AcR_pmm1CDYwY4</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBCm2qtl2Ku22rZPRCo8q41dZadS43bv_c</string>
     -->
+
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDBhx2BuAuuzrFDTfUU8AcR_pmm1CDYwY4</string>
 </resources>
