--- a/app/src/main/res/layout-large/activity_main2.xml
+++ b/app/src/main/res/layout-large/activity_main2.xml
@@ -11,11 +11,11 @@
 
     <ImageView
         android:id="@+id/imageView13"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/logoapp"/>
+        app:srcCompat="@drawable/logoapp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -33,8 +33,8 @@
 
             <ImageView
                 android:id="@+id/alertIcon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 app:srcCompat="@drawable/mask_group_1alertmsg" />
 
         </LinearLayout>
@@ -47,8 +47,8 @@
 
             <ImageView
                 android:id="@+id/nearbyIcon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 app:srcCompat="@drawable/group_44" />
 
         </LinearLayout>
@@ -60,42 +60,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout"
-        android:orientation="horizontal"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:gravity="center">
 
             <Button
                 android:id="@+id/alert"
-                android:layout_width="193dp"
-                android:layout_height="35dp"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
                 android:background="@android:color/background_light"
                 android:text="@string/tv_sendalert"
-                android:textSize="15sp"/>
+                android:textSize="17dp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:gravity="center">
 
             <Button
                 android:id="@+id/nearby"
-                android:layout_width="193dp"
-                android:layout_height="35dp"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
                 android:background="@android:color/background_light"
                 android:text="@string/tv_finding"
-                android:textSize="15sp" />
+                android:textSize="17sp" />
 
         </LinearLayout>
 
@@ -106,8 +106,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout2"
-        android:orientation="horizontal"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -117,8 +117,8 @@
 
             <ImageView
                 android:id="@+id/firstaidIcon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 app:srcCompat="@drawable/mask_group_6" />
 
         </LinearLayout>
@@ -131,8 +131,8 @@
 
             <ImageView
                 android:id="@+id/precautionaryIcon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 app:srcCompat="@drawable/mask_group_9" />
 
         </LinearLayout>
@@ -144,42 +144,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout3"
-        android:orientation="horizontal"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:gravity="center">
 
             <Button
                 android:id="@+id/firstaid"
-                android:layout_width="193dp"
-                android:layout_height="35dp"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
                 android:background="@android:color/background_light"
                 android:text="@string/tv_firstaidAAAA"
-                android:textSize="15sp"/>
+                android:textSize="17sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:gravity="center">
 
             <Button
                 android:id="@+id/precautionary"
-                android:layout_width="193dp"
-                android:layout_height="35dp"
+                android:layout_width="210dp"
+                android:layout_height="50dp"
                 android:background="@android:color/background_light"
                 android:text="@string/tv_precautionary"
-                android:textSize="15sp" />
+                android:textSize="17dp" />
 
         </LinearLayout>
 
@@ -187,14 +187,14 @@
 
     <Button
         android:id="@+id/emergency"
-        android:layout_width="190dp"
-        android:layout_height="57dp"
+        android:layout_width="210dp"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="sans-serif-black"
         android:text="@string/tv_emergency"
-        android:textSize="20sp" />
+        android:textSize="22sp" />
 
 </RelativeLayout>
